--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="info">
-      <p id="fps"></p>
+      <p id="output"></p>
     </div>
     <canvas></canvas>
     <script type="module" src="/src/main.ts"></script>
