--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet"> 
     <title>Vite + TS</title>
   </head>
   <body>
     <div class="info">
       <p id="output"></p>
+    </div>
+    <div class="dialogue">
+      <div class="name">name</div>
+      <div>
+        How do you do, fellow humans?
+      </div>
     </div>
     <canvas></canvas>
     <script type="module" src="/src/main.ts"></script>
