--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </dialog>
     <dialog id="shed">
       <form>
-        <p>FFF = 255255255</p>
+        <p>FFFFFF = 255255255</p>
         <input type="number">
         <input type="number">
         <input type="number">
