--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>threegame</title>
   </head>
   <body>
+    <div class="cursor"></div>
     <div class="info">
       <p id="output"></p>
     </div>
@@ -39,6 +40,7 @@
         <input type="submit">
       </form>
     </dialog>
+    <div id="hints"></div>
     <canvas></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
